--- a/src/Components/MusicTable/MusicTable.css
+++ b/src/Components/MusicTable/MusicTable.css
@@ -1,14 +1,22 @@
+.placeholder{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .table{
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin-top: 10px;
-    background: linear-gradient(0deg, aqua, white);
+    min-height: 90vh;
 }
 
 .table table{
     border: 3px solid black;
     background-color: whitesmoke;
+    min-width: 60%;
+    margin-bottom: 2%;
 }
 
 .table thead{
@@ -22,4 +30,10 @@
 
 .table tr{
     font-size: 28px;
+}
+
+.table td{
+    text-align: center;
+    padding: 3px;
+    border: 1px solid black;
 }
