--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -2,5 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 5px;
+    align-items: center;
+    min-height: 10vh;
+    margin-bottom: 2px;
+    padding: 1px;
+    border: 3px solid black;
 }
