--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -1,19 +1,34 @@
 .search-bar{
     text-align: center;
+    height: 100%;
     width: 60%;
 }
 
 .search-bar label{
     font-size: 25px;
+    margin-left: 1%;
     margin-right: 1%;
     height: 90%;
 }
 
 .search-bar select{
     height: 90%;
+    font-size: 20px;
+    text-align: center;
+}
+
+.search-bar option{
+    font-size: 20px;
 }
 
 .search-bar input{
     height: 90%;
+    font-size: 20px;
 }
+
+.search-bar input:nth-of-type(1n){
+    margin-right: 1%;
+}
+
+
 
