--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -3,8 +3,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    background-color: white;
     min-height: 10vh;
     margin-bottom: 2px;
     padding: 1px;
     border: 3px solid black;
+    position: sticky;
+    top: 0px;
 }
