--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .nav-bar {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background-color: white;
     min-height: 10vh;
@@ -10,4 +10,10 @@
     border: 3px solid black;
     position: sticky;
     top: 0px;
+}
+
+.nav-bar h1{
+    font-size: 40px;
+    margin: 0;
+    margin-left: 4%;
 }
