--- a/src/Components/CreateSong/CreateSong.css
+++ b/src/Components/CreateSong/CreateSong.css
@@ -2,9 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60vw;
-    margin-left: 20vw;
-    margin-right: 20vw;
+    width: 40vw;
+    margin-top: 1em;
+    margin-left: 30vw;
+    margin-right: 30vw;
     border: 2px solid black;
 }
 
